# Priority: Critical
# Test ID: C827
# Title: Buy Scene - No crash going into each USA supported Sell Partner
# Expected Result:
#   1. User is able to access each supported Sell Partner in the USA without crashing

appId: ${MAESTRO_APP_ID}
tags:
- android
- C826
---
- runFlow:
    file: ../common/launch-cleared.yaml
- runFlow:
    file: ../common/login-password.yaml
    env:
      USERNAME: ${MAESTRO_EDGE_USA_PARTNERS_USERNAME}
      PASSWORD: ${MAESTRO_EDGE_USA_PARTNERS_PASSWORD}
  
- extendedWaitUntil:
    visible: Sell
    timeout: 120000
- tapOn: "Sell"
- extendedWaitUntil:
    visible: Sell Cryptocurrency
    timeout: 120000
- tapOn: "ACH Bank Transfer"
- extendedWaitUntil:
    visible: MoonPay
    timeout: 120000
- tapOn:
    id: "chevronBack"
- assertVisible: "Sell Cryptocurrency"
- tapOn: "Gift Cards"
- extendedWaitUntil:
    visible: "Bitrefill"
    timeout: 120000
- tapOn:
    id: "chevronBack"
- assertVisible: "Sell Cryptocurrency"

- stopApp